# agent.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  agent.hpp  agent.txt  api.md  app.cpp  app.hpp  build.py  readme.md  release.md  setting.json  settings.json  ui.py  vcpkg.json  webui.cpp  webui.html  webui.md  webui_build.py
.github/workflows/: cmake-multi-platform.yml
memorys/: 1776414520.json
sys/: cs.txt  data.json  sys_state.py  sys_tools.py  tg_bot.py
tools/: tools.json
tools/image-drawer/: run.py  tool.md
tools/playwright-tools/: run.py  tool.md
